# buzztrax-additive

./: LICENSE  Makefile.am  README.md  configure.ac
src/: additive.c  additive.h  adsr.c  adsr.h  debug.h  envelope.c  envelope.h  generated-genums.c.in  generated-genums.h.in  genums.h  lfo.c  lfo.h  math.c  math.h  properties_simple.c  properties_simple.h  propsratecontrolsource.c  propsratecontrolsource.h  sse_mathfun.h  voice.c  voice.h
